<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="78dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="127dp"
        android:layout_marginBottom="20dp"
        android:text="@string/no_account"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_shape_border"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/round_shape_border"
        android:drawableStart="@drawable/pass_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:includeFontPadding="true"
        android:inputType="textPassword"

        android:paddingLeft="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <Button
        android:id="@+id/Button_log_in"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_shape_border"
        android:gravity="center"
        android:text="Log In"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/sign_up_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="127dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_1"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/forgot_pass"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>